--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -260,7 +260,7 @@
   max-width: var(--ifm-container-width);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 966px) {
   .heroBanner {
     padding-left: 20px;
     padding-right: 20px;
@@ -271,7 +271,7 @@
   }
 
   .subtitleInner {
-    font-size: 28px;
+    font-size: 32px;
   }
 }
 
